--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "BarberAppointment",
+    "name": "BookABarber",
     "slug": "BarberAppointment",
     "version": "1.0.0",
     "orientation": "portrait",
@@ -11,7 +11,7 @@
     "splash": {
       "image": "./assets/images/splash-icon.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#7e9cad"
     },
     "ios": {
       "supportsTablet": true
@@ -19,7 +19,17 @@
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
+        "backgroundColor": "#7e9cad"
+      },
+      "package": "com.pawankumar1212.BarberAppointment",
+      "permissions": [
+        "android.permission.ACCESS_COARSE_LOCATION",
+        "android.permission.ACCESS_FINE_LOCATION"
+      ],
+      "config": {
+        "googleMaps": {
+          "apiKey": "AIzaSyCTiZAspHCRRqNiWc2iXQ8cztCiiMAPOoo"  
+        }
       }
     },
     "web": {
@@ -28,10 +38,41 @@
       "favicon": "./assets/images/favicon.png"
     },
     "plugins": [
-      "expo-router"
+      "expo-router",
+      [
+        "@react-native-community/datetimepicker",
+        {
+          "android": {
+            "timePicker": {
+              "background": {
+                "light": "#232323",
+                "dark": "#232323"
+              },
+              "numbersBackgroundColor": {
+                "light": "#FF7900",
+                "dark": "#FF7900"
+              }
+            }
+          }
+        }
+      ],
+      [
+        "expo-location",
+        {
+          "locationAlwaysAndWhenInUsePermission": "Allow BookABarber to use your location."
+        }
+      ]
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "b64dc762-3caf-428b-a294-780e5e757ef5"
+      }
     }
   }
 }
