--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "version": "1.0.0",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll"
   },
@@ -13,12 +13,19 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@clerk/clerk-expo": "^2.4.2",
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-community/datetimepicker": "8.2.0",
+    "@react-navigation/drawer": "^7.0.19",
     "@react-navigation/native": "^7.0.0",
+    "@supabase/supabase-js": "^2.47.2",
     "expo": "~52.0.17",
+    "expo-blur": "^14.0.1",
     "expo-font": "~13.0.1",
     "expo-linking": "~7.0.3",
     "expo-router": "~4.0.11",
+    "expo-secure-store": "^14.0.0",
     "expo-splash-screen": "~0.29.15",
     "expo-status-bar": "~2.0.0",
     "expo-system-ui": "~4.0.5",
@@ -26,10 +33,16 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.3",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-maps": "1.18.0",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
-    "react-native-web": "~0.19.13"
+    "react-native-toast-message": "^2.2.1",
+    "react-native-url-polyfill": "^2.0.0",
+    "react-native-web": "~0.19.13",
+    "zustand": "^5.0.2",
+    "expo-location": "~18.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
