--- a/app.json
+++ b/app.json
@@ -10,6 +10,7 @@
     "newArchEnabled": true,
     "splash": {
       "image": "./assets/images/splash-icon.png",
+      "imagewidth": 150,
       "resizeMode": "contain",
       "backgroundColor": "#7e9cad"
     },
