--- a/app.json
+++ b/app.json
@@ -8,18 +8,16 @@
     "scheme": "myapp",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
-    "splash": {
-      "image": "./assets/images/splash-icon.png",
-      "imagewidth": 150,
-      "resizeMode": "contain",
-      "backgroundColor": "#7e9cad"
-    },
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "icon": "./assets/images/icon.png",
+      "config": {
+        "usesNonExemptEncryption": false
+      }
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/images/adaptive-icon.png",
+        "foregroundImage": "./assets/images/icon.png",
         "backgroundColor": "#7e9cad"
       },
       "package": "com.pawankumar1212.BarberAppointment",
@@ -61,6 +59,15 @@
         "expo-location",
         {
           "locationAlwaysAndWhenInUsePermission": "Allow BookABarber to use your location."
+        }
+      ],
+      [
+        "expo-splash-screen",
+        {
+          "image": "./assets/images/splash.png",
+          "imageWidth": 400,
+          "resizeMode": "contain",
+          "backgroundColor": "#ffffff"
         }
       ]
     ],
