--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "expo-linking": "~7.0.3",
     "expo-router": "~4.0.11",
     "expo-secure-store": "^14.0.0",
-    "expo-splash-screen": "~0.29.15",
+    "expo-splash-screen": "~0.29.18",
     "expo-status-bar": "~2.0.0",
     "expo-system-ui": "~4.0.5",
     "expo-web-browser": "~14.0.1",
@@ -42,7 +42,8 @@
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.19.13",
     "zustand": "^5.0.2",
-    "expo-location": "~18.0.4"
+    "expo-location": "~18.0.4",
+    "expo-linear-gradient": "~14.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
