--- a/package.json
+++ b/package.json
@@ -17,27 +17,27 @@
     "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/datetimepicker": "8.2.0",
-    "@react-navigation/drawer": "^7.0.19",
+    "@react-navigation/drawer": "^7.0.0",
     "@react-navigation/native": "^7.0.0",
     "@supabase/supabase-js": "^2.47.2",
-    "expo": "~52.0.17",
+    "expo": "~52.0.20",
     "expo-blur": "^14.0.1",
     "expo-font": "~13.0.1",
     "expo-linking": "~7.0.3",
-    "expo-router": "~4.0.11",
+    "expo-router": "~4.0.15",
     "expo-secure-store": "^14.0.0",
     "expo-splash-screen": "~0.29.18",
     "expo-status-bar": "~2.0.0",
-    "expo-system-ui": "~4.0.5",
+    "expo-system-ui": "~4.0.6",
     "expo-web-browser": "~14.0.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "0.76.3",
+    "react-native": "0.76.5",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-maps": "1.18.0",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.1.0",
+    "react-native-screens": "~4.4.0",
     "react-native-toast-message": "^2.2.1",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.19.13",
@@ -52,6 +52,13 @@
     "jest-expo": "~52.0.2",
     "react-test-renderer": "18.3.1",
     "typescript": "~5.3.3"
+  },
+  "expo": {
+    "doctor": {
+      "reactNativeDirectoryCheck": {
+        "exclude": ["react-native-maps"]
+      }
+    }
   },
   "private": true
 }
